grammar.txt
    program : PROGRAM variable SEMI block DOT

    block : declarations compound_statement

    declarations : VAR (variable_declaration SEMI)+
                 | empty

    variable_declaration : ID (COMMA ID)* COLON type_spec

    type_spec : INTEGER
              | REAL
              | BOOLEAN

    compound_statement : BEGIN statement_list END

    statement_list : statement
                   | statement SEMI statement_list

    statement : compound_statement
              | assignment_statement
              | if_statement
              | empty

    assignment_statement : variable ASSIGN expression

    if_statement : IF expression THEN statement (ELSE statement)?

    empty :

    expression : arithmetic_expr ((EQUAL
                                 | NOT_EQUAL
                                 | LESS_THAN
                                 | LESS_EQUAL
                                 | GREATER_THAN
                                 | GREATER_EQUAL) arithmetic_expr)?

    arithmetic_expr : term ((PLUS | MINUS) term)*

    term : factor ((MUL | INTEGER_DIV | FLOAT_DIV) factor)*

    factor : PLUS factor
           | MINUS factor
           | INTEGER_CONST
           | REAL_CONST
           | BOOLEAN_CONST
           | LPAREN expression RPAREN
           | variable

    variable: ID
